# Path-Tracking-Controllers

./: README.md
auto/: CMakeLists.txt  main.cpp
auto/PathTracking/LQR/: LQRControl.cpp  LQRControl.h  main.cpp
auto/PathTracking/MPC/: Mpc.cpp  Mpc.h  MpcMain.cpp
auto/PathTracking/utils/: KinematicModel.cpp  KinematicModel.h  LowPassFilter.cpp  LowPassFilter.h  MyReferencePath.cpp  MyReferencePath.h  NormalizeAngle.hpp
